<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/product_name_placeholder"
                android:paddingHorizontal="5dp"
                android:autofillHints="Employee name"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_placeholder"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/product_price_placeholder"
                android:inputType="number"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="5dp"
                android:text="@string/select_product_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
  >
            <EditText
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:digits="0123456789"
                android:hint="@string/product_location_placeholder"
                android:layout_weight="1"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/btn_location"
                android:text="map"
                android:layout_width="100dp"
                android:layout_height="50dp"
            android:backgroundTint="@color/purple_200" />

    </LinearLayout>
            <Button
                android:id="@+id/btn_add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/add_product_button_text" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>